# Bot

./: .gitignore  .gitmodules  Cargo.toml  README.md  babel.config.js  package.json  tsconfig.json
.github/workflows/: buildBinary.yml  renewCache.yml
dev_config/: sample.env  worker.env
scripts/: build_app.sh  run_binary_compiler.js
src/: Backend.ts  DiscordBot.ts  Logger.ts  ServerFrontend.ts  WorkerManager.ts  api_keys.rs  id_converter.rs  index.ts  lib.rs
src/BotCommands/: assignkeyownership.ts  assignkeytodiscord.ts  ban.ts  ban_by_username.ts  banstatus.ts  broadcast.ts  broadcastdevchat.ts  createapikey.ts  findkeysfromuser.ts  getnumberid.ts  getshareid.ts  scanmap.ts  shutdown.ts  swapapikey.ts  template.ts  test.ts  togglekeysassociatedwithuser.ts  togglekeystatus.ts  unban.ts  unban_by_username.ts  whitelist.ts
src/CompatibilityModules/public-ip/: browser.js  core.js  ip-regex.js
src/Components/: Backend.ts  DiscordBot.ts  LegacyServerFrontend.ts  ServerBackend.ts  ServerFrontend.ts  WorkerManager.ts
src/RobloxFileParser/: BinaryParser.ts
src/Utilities/: CpuBenchmark.ts  Logger.ts
src/Utilities/AudioDecoder/: index.js
src/Utilities/RobloxFileParser/: FileParser.ts
src/audioDecoder/: audioBuffer.js  audioEngine.js  index.js
src/bassaudio/: shim.d.ts  shim.js
src/bassaudio/examples/: encoder.js  microphone.js  single_track.js  single_track_with_addons.js
src/bassaudio/package/: FfiFunDeclarationIndex.d.ts  FfiFunDeclarationIndex.js  (+8 more)
src/components/: backend.rs
src/public-ip/: index.js  is-ip.js  super-regex.js
static/: index.html
(+92 files in other folders)
