[package]
name = "liquid_breakout_backend"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
mongodb = "2.7.0"
serde = "1.0"
serde_json = "1.0"
reqwest = "0.11.22"
serenity = "0.12.0"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
